--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "marked": "^7.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
+    "remark-breaks": "^3.0.3",
+    "remark-gfm": "^3.0.1",
     "sass": "^1.65.1"
   },
   "devDependencies": {
